--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="prompt_password">Password</string>
     <string name="prompt_confirm_password">Confirm password</string>
     <string name="action_sign_in">Login</string>
+    <string name="action_sign_up">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">Welcome !</string>
     <string name="invalid_username">Not a valid username</string>
