--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,11 @@
     <string name="See_past_results">See past results</string>
     <string name="Test">Test</string>
     <string name="Profile">Profile</string>
-    <string name="StudentMain">Back to Main</string>
+    <string name="role_spinner">Role</string>
+    <string-array name="Role">
+        <item>Student</item>
+        <item>Teacher</item>
+    </string-array>
+    <string name="action_log_out">LOGOUT</string>
+
 </resources>
