Added activity_test page with mended strings.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
         <item>Teacher</item>
     </string-array>
     <string name="action_log_out">LOGOUT</string>
+    <string name="test_content">contents of Test</string>
 
 </resources>
