--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -18,7 +18,7 @@
     <string name="Test">Test</string>
     <string name="Profile">Perfil</string>
     <string name="role_spinner">Rol</string>
-    <string name="action_log_out">Salir</string>
+    <string name="action_log_out">SALIR</string>
     <string name="Difficulty">Escoger dificultad</string>
     <string name="ChooseTest">Escoger Test</string>
 </resources>
