--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -21,4 +21,5 @@
     <string name="action_log_out">SALIR</string>
     <string name="Difficulty">Escoger dificultad</string>
     <string name="ChooseTest">Escoger Test</string>
+    <string name="Reading">Lectura</string>
 </resources>
