--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -21,4 +21,5 @@
     <string name="action_log_out">LOGGA UT</string>
     <string name="Difficulty">Välj svårighet</string>
     <string name="ChooseTest">Välj test</string>
+    <string name="Reading">Läsning</string>
 </resources>
