--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -18,11 +18,15 @@
     <string name="Test">Test</string>
     <string name="Profile">Perfil</string>
     <string name="role_spinner">Rol</string>
+    <string-array name="Role">
+        <item>Estudiante</item>
+        <item>Profesor</item>
+    </string-array>
     <string name="action_log_out">SALIR</string>
     <string name="Difficulty">Escoger dificultad</string>
     <string name="ChooseTest">Escoger Test</string>
     <string name="Reading">Lectura</string>
-    <string name="Finish">Terminar</string>
+    <string name="Finish">TERMINAR</string>
     <string name="Vocabulary">Vocabulario</string>
     <string name="Writing">Escritura</string>
     <string name="Speaking">Oral</string>
