--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -45,4 +45,5 @@
     <string name="Listening">Escucha</string>
     <string name="test_result">Resultado</string>
     <string name="backToMain">Volver a página principal</string>
+    <string name="resetTests">Resetear tests</string>
 </resources>
