--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -45,4 +45,5 @@
     <string name="Vocabulary">Ordförråd</string>
     <string name="test_result">Resultat</string>
     <string name="backToMain">Tillbaka till main</string>
+    <string name="resetTests">Återställ tester</string>
 </resources>
