--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -30,4 +30,5 @@
     <string name="test_result">Rezultat</string>
     <string name="backToMain">Powrót do głównego menu</string>
     <string name="resetTests">Zresetuj testy</string>
+    <string name="playAudio">GRAC!</string>
 </resources>
