ListeningTest working and ShowResults of Reading and Listening too

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -47,4 +47,8 @@
     <string name="backToMain">Volver a página principal</string>
     <string name="resetTests">Resetear tests</string>
     <string name="playAudio">PLAY!</string>
+    <string name="solutions">SOLUCIONES</string>
+    <string name="reading_tests">Tests de lectura</string>
+    <string name="listening_tests">Tests de escucha</string>
+    <string name="next">Next</string>
 </resources>
