--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -47,4 +47,8 @@
     <string name="backToMain">Tillbaka till main</string>
     <string name="resetTests">Återställ tester</string>
     <string name="playAudio">SPELA!</string>
+    <string name="solutions">LÖSNINGAR</string>
+    <string name="next">Next</string>
+    <string name="reading_tests">Läsning</string>
+    <string name="listening_tests">Lyssnande</string>
 </resources>
