--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -31,4 +31,8 @@
     <string name="backToMain">Powrót do głównego menu</string>
     <string name="resetTests">Zresetuj testy</string>
     <string name="playAudio">GRAC!</string>
+    <string name="solutions">ROZWIAZANIA</string>
+    <string name="reading_tests">Czytanie</string>
+    <string name="listening_tests">Zakończ</string>
+    <string name="next">Next</string>
 </resources>
