VocabularyTest and ShowVocabularyTestActivity working

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -35,4 +35,5 @@
     <string name="reading_tests">Czytanie</string>
     <string name="listening_tests">Zakończ</string>
     <string name="next">Next</string>
+    <string name="vocabulary_tests">Słuchanie</string>
 </resources>
