--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -51,4 +51,5 @@
     <string name="reading_tests">Tests de lectura</string>
     <string name="listening_tests">Tests de escucha</string>
     <string name="next">Next</string>
+    <string name="vocabulary_tests">Tests de Vocabulario</string>
 </resources>
