--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -51,4 +51,5 @@
     <string name="next">Next</string>
     <string name="reading_tests">Läsning</string>
     <string name="listening_tests">Lyssnande</string>
+    <string name="vocabulary_tests">Ordförråd</string>
 </resources>
