ShowResults for writing and speaking finished

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -36,4 +36,6 @@
     <string name="listening_tests">Zakończ</string>
     <string name="next">Next</string>
     <string name="vocabulary_tests">Słuchanie</string>
+    <string name="play">PLAY</string>
+    <string name="stop">STOP</string>
 </resources>
